# PyDataScripter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data_import.py  my_sqlite.db  pyproject.toml  script.py
.github/workflows/: test.yml
database/: DataTransformer.py  Database.py  Query.py
recruitement-task-backend-internship-main-data/data/: users_2.xml
recruitement-task-backend-internship-main-data/data/a/: users.json
recruitement-task-backend-internship-main-data/data/a/b/: users_1.csv
recruitementtask/: DataTranformer.py  Database.py  EntryValidator.py  Query.py  data-import.py
test-data/data/a/b/: users_1.xml
tests/: test_DataTransformer.py  test_EntryValidator.py  test_Query.py
