[tool.poetry]
name = "RecruitmentTask"
version = "0.1.0"
description = "Recruitment Task - backend Internship"
authors = ["radzek15 <radzek15@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
