[tool.poetry]
name = "RecruitementTask"
version = "0.1.0"
description = "Recruitment Task - backend Internship"
authors = ["radzek15 <radzek15@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
isort = "^5.12.0"
pyupgrade = "^3.15.0"
pandas = "^2.1.3"
jupyter = "^1.0.0"
lxml = "^4.9.3"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
ignore = [
    "E712",  # Allow using if x == False, as it's not always equivalent to if x.
    "E501",  # Supress line-too-long warnings: trust black's judgement on this one.
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.pytest.ini_options]
markers = [
    "EntryValidator",
    "DataTransformer",
    "Query",
]
